infrastructure-simulation/dev-tier/service-backend-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: netops-backend
  namespace: netops-dev
spec:
  type: ClusterIP
  selector:
    app: netops-backend
  ports:
    - port: 8000
      targetPort: 8000
