infrastructure-simulation/dev-tier/service-frontend-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: netops-frontend
  namespace: netops-dev
spec:
  type: ClusterIP
  selector:
    app: netops-frontend
  ports:
    - port: 80
      targetPort: 80
